<resources>
    <string name="app_name">BuffBody</string>
    <string name="body_part_prompt">Select Body Part</string>
    <string name="target_prompt">Select Target Muscle</string>
    <string name="equipment_prompt">Select Equipment</string>
    <string name="select_body_part">Select Body Part</string>
    <string name="select_target">Select Target Muscle</string>
    <string name="select_equipment">Select Equipment</string>
    <string name="muscle_group_button">Muscle Group</string>
    <string name="template_name">Template Name</string>
    <string name="template_description">Template Description</string>
    <string name="kg">KG</string>
    <string name="reps">Reps</string>
    <string name="history">History</string>
    <string name="overview">Overview</string>
    <string name="notes">Notes</string>
    <string name="track">Track</string>
    <string name="record">Record</string>
    <string name="calculator">Calculator</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="equipment">Equipment:</string>
    <string name="target_muscle">Target:</string>
    <string name="body_part">Body Part</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="exercise_gif_image">Exercise Gif/Image</string>
    <string name="back_button">back_button</string>
    <string name="workout_plans">Workout Plans</string>
    <string name="search_exercise">Search exercise</string>
    <string name="log_next_set">Log Next Set</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_register">Go to Register</string>
    <string name="full_name">Full Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="height_in_cm">Height in CM</string>
    <string name="weight_in_kg">Weight in KG</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="my_workouts">My Workouts</string>
    <string name="no_workouts_please_create_one">No workouts, please create one</string>
    <string name="generate_workout">Generate Workout</string>
    <string name="no_generated_workouts">No generated workouts</string>
    <string name="community_workouts">Community Workouts</string>
    <string name="no_community_workouts">No community workouts</string>
    <string name="exe">exe</string>
    <string name="strength_score">Strength Score</string>
    <string name="recent_sessions">Recent Sessions</string>
    <string name="plans_for">Plans for</string>
    <string name="add_workout">Add Workout</string>
    <string name="hide">Hide</string>
    <string name="workout_name">Workout Name</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="save_workout">Save Workout</string>
    <string name="search_exercises_by_name">Search exercises by name</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="oops_we_haven_t_found_an_exercise_for_that_yet_maybe_you_can_create_a_new_one">Oops! 😢 We haven\'t found an exercise for that yet, maybe you can create a new one 😉</string>
    <string name="category">Category:</string>
    <string name="target_primary_muscles">Target/Primary Muscles:</string>
    <string name="secondary_muscles">Secondary Muscles:</string>
    <string name="instructions">Instructions:</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="performance">Performance</string>
    <string name="insights">Insights</string>
    <string name="body_stats">Body Stats</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="body_fat">Body Fat (%)</string>
    <string name="waist_size_cm">Waist Size (cm)</string>
    <string name="save">Save</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="target">Target</string>
    <string name="filter_exercises">Filter Exercises</string>
    <string name="select_target_muscle">Select Target Muscle</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="planned_workout">Planned Workout</string>
    <string name="freestyle_workout">Freestyle Workout</string>
    <string name="progress_photo">Progress Photo</string>
    <string name="expand">Expand</string>
    <string name="exercise_title">Exercise Title</string>
    <string name="remove">Remove</string>
    <string name="add_a_set">Add a Set</string>
    <string name="plans">Plans</string>
    <string name="settings">Settings</string>
    <string name="analytics">Analytics</string>
    <string name="home">Home</string>
</resources>