<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_exercises"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_body_part"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/bodyPartSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:prompt="@string/select_body_part"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_target_muscle"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/targetSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:alpha="0.5"
        android:prompt="@string/select_target"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_equipment"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/equipmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:alpha="0.5"
        android:prompt="@string/select_equipment"/>

    <Button
        android:id="@+id/applyFiltersButton"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"/>

</LinearLayout>
