<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/image_exercise"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/text_exercise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/expandCollapseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expand" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp">

        <!-- Example of one set, additional sets will be added dynamically -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/kg_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/kg"
                android:inputType="number"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/reps_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/reps"
                android:inputType="number" />

            <Button
                android:id="@+id/button_remove_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_add_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_set" />

</LinearLayout>
