<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginBottom="8dp">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/kg_input"
        android:hint="@string/kg"
        android:inputType="number"
        android:layout_marginEnd="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/reps_input"
        android:hint="@string/reps"
        android:inputType="number" />

    <Button
        android:id="@+id/button_remove_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove" />
</LinearLayout>