<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.mykotlinapps.bodybuilder.data.viewmodel.ExerciseViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/filterContainer"
                android:layout_marginEnd="8dp"
                android:hint="@string/search_exercises_by_name"
                android:inputType="text"
                android:paddingStart="40dp"
                android:paddingEnd="8dp"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:background="@drawable/search_background"/>

            <LinearLayout
                android:id="@+id/filterContainer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/search_background"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/filterIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/filter_icon"
                    android:src="@drawable/ic_filter"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/noExercisesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oops_we_haven_t_found_an_exercise_for_that_yet_maybe_you_can_create_a_new_one"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</layout>
